body selector Werkt

--- a/src/style.css
+++ b/src/style.css
@@ -292,7 +292,7 @@ footer {
 }
 
 .colorBgTop::before {
-  content: '';
+  content: "";
   display: block;
   position: absolute;
   top: -4.9rem;
@@ -782,7 +782,7 @@ progress::-moz-progress-bar {
 
   &::before,
   &::after {
-    content: '';
+    content: "";
     display: block;
     position: absolute;
     left: 0;
@@ -934,7 +934,7 @@ progress::-moz-progress-bar {
 
     &::before,
     &::after {
-      content: '';
+      content: "";
       display: block;
       position: absolute;
       left: 0;
@@ -1204,6 +1204,7 @@ progress::-moz-progress-bar {
 
 .createProjectForm {
   display: flex;
+  align-items: center;
 
   & .bodyPartSelector {
     margin-right: 2rem;
@@ -1565,32 +1566,76 @@ progress::-moz-progress-bar {
   background-repeat: no-repeat;
 }
 
-/* JUNK */
+/* BODY SELECTOR */
+
+.bodyPartSelector {
+  position: relative;
+  width: 10rem;
+  height: 29.5rem;
+  background-color: #fff;
+
+  &::after {
+    content: "";
+    position: absolute;
+    z-index: 3;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    display: block;
+    background-image: url(/assets/img/body.svg);
+    background-position: center center;
+    background-size: auto 100%;
+    background-repeat: no-repeat;
+  }
+}
 
 .bodyPart {
+  position: absolute;
+  z-index: 5;
   display: block;
-  width: 100px;
-  height: 100px;
-  background-color: var(--activeColor);
-
-  & .selectedBox {
-    display: block;
-    width: 100%;
-    height: 100%;
-    background-color: var(--activeColor);
-  }
 
   & input {
     display: none;
   }
 
-  & input:checked ~ .selectedBox {
-    background-color: var(--activeColor);
+  &:checked {
+    background-color: red;
   }
 }
 
-.activeBodyPart {
+.selectedBox {
+  position: absolute;
+  z-index: 2;
+  display: block;
+  border-radius: 50%;
+}
+
+.activeBox {
   background-color: var(--activeColor);
+}
+
+.bodyPart[for="handL"],
+.selectedBox[data-id="handL"] {
+  top: 45%;
+  width: 2.4rem;
+  height: 2.4rem;
+}
+
+.bodyPart[for="handR"],
+.selectedBox[data-id="handR"] {
+  top: 45%;
+  right: 0;
+  width: 2.4rem;
+  height: 2.4rem;
+}
+
+.bodyPart[for="hoofd"],
+.selectedBox[data-id="hoofd"] {
+  top: 2.5%;
+  left: 25%;
+  width: 4rem;
+  height: 4rem;
 }
 
 .cssOutroVid {
@@ -1708,6 +1753,10 @@ legend {
   flex-direction: column;
   justify-content: center;
   flex: 2;
+}
+
+.formBodyHolder {
+  align-items: center;
 }
 
 .profilePicHolder {
