--- a/src/style.css
+++ b/src/style.css
@@ -87,7 +87,7 @@ label span {
   display: block;
   font-size: 2rem;
   color: var(--secondColorBgTextColor);
-  margin-bottom: 0.5rem;
+  margin-bottom: .5rem;
 }
 
 .labelWithCheckbox {
@@ -105,7 +105,7 @@ label span {
     font-size: var(--broodtekst);
   }
 
-  & input[type="checkbox"] {
+  & input[type='checkbox'] {
     position: absolute;
     top: 0;
     left: 0;
@@ -114,16 +114,16 @@ label span {
     cursor: pointer;
   }
 
-  & input[type="text"] {
+  & input[type='text'] {
     order: -1;
     margin-left: 1rem;
   }
 
-  & input[type="text"]:disabled {
-    opacity: 0.5;
+  & input[type='text']:disabled {
+    opacity: .5;
   }
 
-  & input[type="checkbox"]:checked ~ .customCheckBox {
+  & input[type='checkbox']:checked ~ .customCheckBox {
     background-color: var(--activeColor);
     background-image: url(assets/img/checked.svg);
     background-repeat: no-repeat;
@@ -137,7 +137,7 @@ label span {
   min-width: 2.4rem;
   max-width: 2.4rem;
   height: 2.4rem;
-  border-radius: 0.2rem;
+  border-radius: .2rem;
   margin: 0;
   margin-right: 1rem;
   cursor: pointer;
@@ -170,7 +170,7 @@ nav {
 
   & ul li a::before,
   & ul li button::before {
-    content: "";
+    content: '';
     display: block;
     width: 3.5rem;
     height: 3.5rem;
@@ -230,6 +230,8 @@ footer {
   align-items: center;
   background-color: var(--secondColorBg);
   padding: 2rem;
+  position: relative;
+  z-index: 101;
 
   & p {
     width: 19rem;
@@ -326,14 +328,14 @@ footer {
 .ghostBtn {
   color: var(--activeColor);
   background: none;
-  border: solid 0.3rem var(--activeColor);
+  border: solid .3rem var(--activeColor);
 }
 
 progress {
   position: relative;
   z-index: 60;
   display: block;
-  height: 0.4rem;
+  height: .4rem;
   width: 100%;
   background-color: var(--backgroundColor);
 }
@@ -388,7 +390,7 @@ progress::-moz-progress-bar {
   & .progressBarHolder {
     position: relative;
     align-self: flex-start;
-    height: 0.2rem;
+    height: .2rem;
     flex: 2;
   }
 
@@ -418,13 +420,13 @@ progress::-moz-progress-bar {
     left: 0;
     display: flex;
     align-items: center;
-    padding: 0.5rem;
+    padding: .5rem;
     padding-left: 0;
     opacity: 0;
   }
 
   & .comment p {
-    padding-top: 0.3rem;
+    padding-top: .3rem;
     margin-bottom: 0;
   }
 
@@ -433,16 +435,16 @@ progress::-moz-progress-bar {
   }
 
   & .comment::before {
-    content: "";
+    content: '';
     display: block;
     position: absolute;
     z-index: -1;
-    top: 0.5rem;
+    top: .5rem;
     left: 0;
     width: 100%;
     height: calc(100% - 1rem);
     background-color: var(--backgroundColor);
-    opacity: 0.6;
+    opacity: .6;
     border-top-right-radius: 1.2rem;
     border-top-left-radius: 1.2rem;
   }
@@ -454,7 +456,7 @@ progress::-moz-progress-bar {
     height: 2.4rem;
     overflow: hidden;
     background-color: var(--activeColor);
-    margin-right: 0.5rem;
+    margin-right: .5rem;
   }
 
   & .commentImg img {
@@ -931,6 +933,10 @@ progress::-moz-progress-bar {
     margin: 5rem 0;
     background-color: var(--secondColorBg);
 
+    & .prototypeArticleHolder::before {
+      background-image: url(assets/img/tutje.svg);
+    }
+
     & header h3 {
       color: var(--secondColorBgTextColor);
     }
@@ -972,6 +978,17 @@ progress::-moz-progress-bar {
   & .prototypeFase:nth-of-type(2n) {
     margin-top: 9rem;
   }
+
+  & .prototypeArticleHolder::before {
+    background-image: url(assets/img/tutje_2.svg);
+  }
+
+  & .prototypeFase:last-of-type {
+
+    & .prototypeArticleHolder::before {
+      background: none;
+    }
+  }
 }
 
 .prototypeFase {
@@ -1007,7 +1024,7 @@ progress::-moz-progress-bar {
     font-size: var(--titlesize);
     font-weight: 400;
     order: 1;
-    margin-left: 0.5rem;
+    margin-left: .5rem;
   }
 
   & .cardVideoHolder {
@@ -1016,7 +1033,7 @@ progress::-moz-progress-bar {
 
   & .difficulty {
     display: flex;
-    margin: 0.5rem 0.5rem 1rem;
+    margin: .5rem .5rem 1rem;
 
     & p {
       font-weight: 300;
@@ -1029,21 +1046,39 @@ progress::-moz-progress-bar {
     & ul li {
       width: var(--broodtekst);
       height: var(--broodtekst);
-      border: solid 0.05rem var(--secondColorBg);
+      border: solid .05rem var(--secondColorBg);
       border-radius: 50%;
       overflow: hidden;
       color: transparent;
-      margin-left: 0.5rem;
+      margin-left: .5rem;
     }
   }
 }
 
+.prototypeArticleHolder::before {
+  content: '';
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 8rem;
+  top: 100%;
+  left: 0;
+  bottom: 0;
+  z-index: 100;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
 .inActiveCard {
-  opacity: 0.5;
+  opacity: .5;
 
   & article header h4 {
     font-size: 1.6rem;
   }
+}
+
+.inActiveCard::after {
+  background-image: none;
 }
 
 .active_difficulty {
@@ -1060,7 +1095,7 @@ progress::-moz-progress-bar {
 
 .prototypeArticleHolder {
   display: flex;
-  overflow: auto;
+  position: relative;
 }
 
 .verifieerBtn {
@@ -1144,6 +1179,15 @@ progress::-moz-progress-bar {
   overflow: hidden;
   background-color: var(--cardColor);
   color: transparent;
+
+  &::after {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    background-image: url(assets/img/close.svg);
+  }
 }
 
 .bigVideoHolder {
