--- a/src/style.css
+++ b/src/style.css
@@ -87,7 +87,7 @@ label span {
   display: block;
   font-size: 2rem;
   color: var(--secondColorBgTextColor);
-  margin-bottom: .5rem;
+  margin-bottom: 0.5rem;
 }
 
 .labelWithCheckbox {
@@ -105,7 +105,7 @@ label span {
     font-size: var(--broodtekst);
   }
 
-  & input[type='checkbox'] {
+  & input[type="checkbox"] {
     position: absolute;
     top: 0;
     left: 0;
@@ -114,16 +114,16 @@ label span {
     cursor: pointer;
   }
 
-  & input[type='text'] {
+  & input[type="text"] {
     order: -1;
     margin-left: 1rem;
   }
 
-  & input[type='text']:disabled {
-    opacity: .5;
+  & input[type="text"]:disabled {
+    opacity: 0.5;
   }
 
-  & input[type='checkbox']:checked ~ .customCheckBox {
+  & input[type="checkbox"]:checked ~ .customCheckBox {
     background-color: var(--activeColor);
     background-image: url(assets/img/checked.svg);
     background-repeat: no-repeat;
@@ -137,7 +137,7 @@ label span {
   min-width: 2.4rem;
   max-width: 2.4rem;
   height: 2.4rem;
-  border-radius: .2rem;
+  border-radius: 0.2rem;
   margin: 0;
   margin-right: 1rem;
   cursor: pointer;
@@ -170,7 +170,7 @@ nav {
 
   & ul li a::before,
   & ul li button::before {
-    content: '';
+    content: "";
     display: block;
     width: 3.5rem;
     height: 3.5rem;
@@ -328,14 +328,14 @@ footer {
 .ghostBtn {
   color: var(--activeColor);
   background: none;
-  border: solid .3rem var(--activeColor);
+  border: solid 0.3rem var(--activeColor);
 }
 
 progress {
   position: relative;
   z-index: 60;
   display: block;
-  height: .4rem;
+  height: 0.4rem;
   width: 100%;
   background-color: var(--backgroundColor);
 }
@@ -390,7 +390,7 @@ progress::-moz-progress-bar {
   & .progressBarHolder {
     position: relative;
     align-self: flex-start;
-    height: .2rem;
+    height: 0.2rem;
     flex: 2;
   }
 
@@ -420,13 +420,13 @@ progress::-moz-progress-bar {
     left: 0;
     display: flex;
     align-items: center;
-    padding: .5rem;
+    padding: 0.5rem;
     padding-left: 0;
     opacity: 0;
   }
 
   & .comment p {
-    padding-top: .3rem;
+    padding-top: 0.3rem;
     margin-bottom: 0;
   }
 
@@ -435,16 +435,16 @@ progress::-moz-progress-bar {
   }
 
   & .comment::before {
-    content: '';
+    content: "";
     display: block;
     position: absolute;
     z-index: -1;
-    top: .5rem;
+    top: 0.5rem;
     left: 0;
     width: 100%;
     height: calc(100% - 1rem);
     background-color: var(--backgroundColor);
-    opacity: .6;
+    opacity: 0.6;
     border-top-right-radius: 1.2rem;
     border-top-left-radius: 1.2rem;
   }
@@ -456,7 +456,7 @@ progress::-moz-progress-bar {
     height: 2.4rem;
     overflow: hidden;
     background-color: var(--activeColor);
-    margin-right: .5rem;
+    margin-right: 0.5rem;
   }
 
   & .commentImg img {
@@ -787,7 +787,7 @@ progress::-moz-progress-bar {
 
   &::before,
   &::after {
-    content: '';
+    content: "";
     display: block;
     position: absolute;
     left: 0;
@@ -943,7 +943,7 @@ progress::-moz-progress-bar {
 
     &::before,
     &::after {
-      content: '';
+      content: "";
       display: block;
       position: absolute;
       left: 0;
@@ -984,7 +984,6 @@ progress::-moz-progress-bar {
   }
 
   & .prototypeFase:last-of-type {
-
     & .prototypeArticleHolder::before {
       background: none;
     }
@@ -1024,7 +1023,7 @@ progress::-moz-progress-bar {
     font-size: var(--titlesize);
     font-weight: 400;
     order: 1;
-    margin-left: .5rem;
+    margin-left: 0.5rem;
   }
 
   & .cardVideoHolder {
@@ -1033,7 +1032,7 @@ progress::-moz-progress-bar {
 
   & .difficulty {
     display: flex;
-    margin: .5rem .5rem 1rem;
+    margin: 0.5rem 0.5rem 1rem;
 
     & p {
       font-weight: 300;
@@ -1046,17 +1045,17 @@ progress::-moz-progress-bar {
     & ul li {
       width: var(--broodtekst);
       height: var(--broodtekst);
-      border: solid .05rem var(--secondColorBg);
+      border: solid 0.05rem var(--secondColorBg);
       border-radius: 50%;
       overflow: hidden;
       color: transparent;
-      margin-left: .5rem;
+      margin-left: 0.5rem;
     }
   }
 }
 
 .prototypeArticleHolder::before {
-  content: '';
+  content: "";
   position: absolute;
   display: block;
   width: 100%;
@@ -1070,7 +1069,7 @@ progress::-moz-progress-bar {
 }
 
 .inActiveCard {
-  opacity: .5;
+  opacity: 0.5;
 
   & article header h4 {
     font-size: 1.6rem;
@@ -1181,7 +1180,7 @@ progress::-moz-progress-bar {
   color: transparent;
 
   &::after {
-    content: '';
+    content: "";
     position: absolute;
     width: 100%;
     height: 100%;
@@ -1622,7 +1621,7 @@ progress::-moz-progress-bar {
   background-color: #fff;
 
   &::after {
-    content: '';
+    content: "";
     position: absolute;
     z-index: 3;
     top: 0;
@@ -1665,23 +1664,23 @@ progress::-moz-progress-bar {
   background-color: var(--activeColor);
 }
 
-.bodyPart[for='handL'],
-.selectedBox[data-id='handL'] {
+.bodyPart[for="handL"],
+.selectedBox[data-id="handL"] {
   top: 45%;
   width: 2.4rem;
   height: 2.4rem;
 }
 
-.bodyPart[for='handR'],
-.selectedBox[data-id='handR'] {
+.bodyPart[for="handR"],
+.selectedBox[data-id="handR"] {
   top: 45%;
   right: 0;
   width: 2.4rem;
   height: 2.4rem;
 }
 
-.bodyPart[for='hoofd'],
-.selectedBox[data-id='hoofd'] {
+.bodyPart[for="hoofd"],
+.selectedBox[data-id="hoofd"] {
   top: 2.5%;
   left: 25%;
   width: 4rem;
