--- a/src/style.css
+++ b/src/style.css
@@ -1272,12 +1272,17 @@ progress::-moz-progress-bar {
 }
 
 .track {
+  position: relative;
   display: flex;
   padding: 1rem;
   height: 100%;
   width: 100%;
   border-radius: var(--borderRadius);
   background-color: var(--backgroundColor);
+}
+
+.extraText {
+  position: absolute;
 }
 
 .uploadBar {
