--- a/src/style.css
+++ b/src/style.css
@@ -1283,6 +1283,13 @@ progress::-moz-progress-bar {
 
 .extraText {
   position: absolute;
+  z-index: 2;
+  top: 0;
+  left: 0;
+  right: 0;
+  border-bottom: solid 0.3rem white;
+  font-size: 2rem;
+  text-align: center;
 }
 
 .uploadBar {
